$Id: Changelog.txt,v 1.444 2019/04/03 16:25:53 nanard Exp $

2019/03/22:
  netfilter: miniupnpd_functions.sh parsing fix.
    fix postrouting chain init.
    use iptables -I instead of -A to add rules

2019/03/09:
  check NULL protocol arg in AddAnyPortMapping

2019/03/07:
  Update portinuse code to reflect changes made in FreeBSD 12.0

2019/02/12:
  linux/getifstats.c: use custom strtoul() implementation to roll over
    after 2^32-1

2019/02/03:
  netfilter: fix build with linux kernel 5.0

2018/12/18:
  upnp_redirect(): accept NULL desc argument (avoid DOS in AddPortMapping)
  upnp_event_prepare(): check the return value of snprintf()

2018/09/07:
  Fix PCP Public address announcement

2018/07/06:
  STUN support

VERSION 2.1 : released on 2018/05/08

2018/05/02:
  option to store remaining time in leasefile

2018/04/12:
  pf: set dst address in rule if use_ext_ip_addr is set

2018/04/06:
  Add options for netfilter scripts

2018/03/13:
  Use monotonic clock for timeouts, etc.

2018/02/22:
  Add option force_igd_desc_v1 to force devices and services versions
    to 1 in IGD v2 mode

2017/12/12:
  Fix a few buffer overrun in SSDP and SOAP parsing

2017/11/02:
  PCP : reset epoch after address change

2017/05/26:
  merge https://github.com/miniupnp/miniupnp/tree/randomize_url branch

2017/05/24:
  get SSDP packet receiving interface index and use it to check if the
    packet is from a LAN

2017/03/13:
  default to client address for AddPortMapping when <NewInternalClient>
    is empty
  pass ext_if_name to add_pinhole()

2016/12/23:
  Fix UDA-1.2.10 Man header empty or invalid

2016/12/16:
  Do not try to open IPv6 sockets once it is disabled

2016/12/01:
  Fix "AddPinhole Twice" test

2016/11/11:
  fixes build for Solaris/SunOS

2016/07/23:
  fixes build error on DragonFly BSD

VERSION 2.0 : released on 2016/04/19

2016/04/18:
  linux/netfilter: fix compile time detection of iptables version >= 1.4.3

2016/03/08: