@@ -1,5 +1,5 @@
 MiniUPnPd
-Copyright (c) 2006-2017, Thomas BERNARD
+Copyright (c) 2006-2019, Thomas BERNARD
 All rights reserved.
 
 Redistribution and use in source and binary forms, with or without
